fixed it now!!! it works on mobile!!!

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -76,19 +76,6 @@ nav {
   body {
     overflow-x: hidden;
   }
-  .nav-links {
-    position: absolute;
-    right: 0px;
-    height: 92vh;
-    top: 8vh;
-    background-color: wheat;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    width: 30%;
-    transform: translateX(100%);
-    transition: transform 0.5s ease-in;
-  }
   .nav-links li{
     opacity: 0;
   }
@@ -97,17 +84,10 @@ nav {
   }
 }
 
-.nav-active {
-  transform: translateX(0%);
+.menuonderdelen li {
+  list-style: none;
+  text-align: center;
 }
-
-@keyframes navLinkFade{
-  from{
-    opacity: 0;
-    transform: translateX(50px);
-  }
-  to{
-    opacity: 1;
-    transform: translateX(0px);
-  }
+.menuonderdelen li a h1 {
+  font-size: 50px;
 }
